Added pAssword reset functionlaoty
